[package]
categories = ["embedded", "no-std"]
description = "Rust scheduler for cortex m3"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "rsos"
version = "0.1.0"

[dependencies]
cortex-m = "0.4.3"
cortex-m-semihosting = "0.2.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.13"

# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
